<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendar.CalendarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/myrectcal"
            android:elevation="@dimen/cardview_default_radius"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/_24"
                android:textAlignment="center"
                android:textColor="#03A9F4"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvKindOfPain"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight=".3"
                        android:text="@string/type"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/kindOfPain"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvPainArea"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight=".3"
                        android:text="@string/area"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <ScrollView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2">

                        <TextView
                            android:id="@+id/painArea"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </ScrollView>

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvIntensity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight=".3"
                        android:text="@string/intensity"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/intensity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvMedics"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight=".3"
                        android:text="@string/medics"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <ScrollView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2">

                        <TextView
                            android:id="@+id/medics"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </ScrollView>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvDuration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight=".3"
                        android:text="@string/duration"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/myrect"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:elevation="@dimen/cardview_default_radius"
            android:theme="@style/CalenderViewCustom"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRealizarReserva" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>